# phasmo-oracle

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BENCHMARK_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  INSIGHTS.md  README.md  TODOS.md  environment.yml  main.py  notes.md  pyproject.toml
.context/: codex-session-id
.github/workflows/: ci.yml
archive/: AGENTS-pre-pivot.md  Oracle-Architecture-Design-LangGraph-v1.md  REFACTOR-sprint2.md  TODOS-pre-pivot.md
archive/langgraph-v1/graph/: llm.py  nodes.py
archive/langgraph-v1/tests/: test_intent_parsing.py  test_main.py  test_nodes.py
config/: .env.local.example  evidence_synonyms.yaml  ghost_database.yaml  settings.py
db/: database.py  queries.py
docs/: Ghost Identification Guide - Deltas.md  Ghost Identification Guide.md  Insights from Demonic Tutor.md  Roadmap.md  Sprint 3b - Voice Pipeline.md  kokoro-applet-example.py
docs/Sprint 1/: Sprint 1 - Core Agent Loop (Text-First).md
docs/Sprint 2/: Sprint 2 - Full Conditional Graph + Voice Shell.md
docs/Sprint 3/: Sprint 3 - Steam Chat Routing via VB-Cable.md
docs/Sprint 4/: Sprint 4 - Bidirectional Voice + Voicemeeter.md
docs/Sprint 5/: Sprint 5 - Polish, API Fallback & Terminal UI.md
docs/Sprint 6/: Sprint 6 - Session Persistence & Game Metrics.md
docs/benchmarks/: results.md
docs/memory/: scaffold-design.md  template.md
docs/test-audit/hawk/: bad-tests.md  kill-list.md  missing-coverage.md  scorecard.md  structural-issues.md
docs/test-audit/viper/: bad-tests.md  kill-list.md  missing-coverage.md  scorecard.md  structural-issues.md
graph/: deduction.py  graph.py  intent_router.py  llm.py  nodes.py  session_log.py  state.py  tools.py
oracle/: __init__.py  __main__.py  deduction.py  engine.py  parser.py  responses.py  runner.py  state.py
oracle/config/: ghost_database.yaml  ghost_tests.yaml  settings.py
oracle/voice/: audio_config.py  radio_fx.py  stt.py  tts.py
tests/: conftest.py  test_audio_router.py  test_db.py  test_deduction.py  test_deduction_oracle.py  test_dispatch.py  test_engine.py  test_ghost_tests.py  test_intent_router.py  test_llm.py  test_loopback.py  test_nodes.py  test_parser.py  test_radio_fx.py  test_responses.py  test_stt.py  test_synonyms.py  test_tools.py  test_triggers.py  test_tts.py  test_ui.py  test_vb_cable.py  test_voice_output.py
tools/: radio_preview.py
ui/: diagnostics.py  display.py  replay.py  stats.py
voice/: audio_router.py  loopback_capture.py  speech_to_text.py  text_to_speech.py  voice_session.py  wake_word.py
voice_test/: .env.local.example  README.md  app.py  requirements.txt
