[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "phasmo-oracle"
version = "0.1.0"
description = "Voice-driven Phasmophobia ghost-identification assistant"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-ollama>=0.2",
    "langchain-anthropic>=0.3",
    "pyyaml>=6.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
voice = [
    "faster-whisper>=1.0",
    "kokoro-onnx>=0.4",
    "sounddevice>=0.5",
    "pyaudio>=0.2",
    "openwakeword>=0.6",
    "scipy>=1.13",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
]

[project.scripts]
oracle = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "graph*", "db*", "voice*", "ui*"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PIE", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["config", "graph", "db", "voice", "ui"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false

[[tool.mypy.overrides]]
module = ["sounddevice.*", "pyaudio.*", "openwakeword.*", "kokoro_onnx.*", "faster_whisper.*"]
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["graph", "db", "config"]
omit = ["tests/*", "voice/*", "ui/*", "main.py"]
