[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phasmo-oracle"
version = "0.1.0"
description = "Voice-driven Phasmophobia ghost-identification assistant"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-ollama>=0.2",
    "langchain-core>=0.3",
    "pyyaml>=6.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
markers = [
    "llm: tests that require a running Ollama instance (deselect with '-m not llm')",
]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["graph*", "config*"]
