[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phasmo-oracle"
version = "0.2.0"
description = "Voice-driven Phasmophobia ghost-identification assistant"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
voice = [
    "kokoro-onnx>=0.4,<1.0",
    "sounddevice>=0.4",
    "scipy>=1.11",
    "numpy>=1.24",
]
voice-full = [
    "phasmo-oracle[voice]",
    "RealtimeSTT>=0.3",
]

[project.scripts]
oracle = "oracle.runner:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["oracle*"]
